# desafio

./: .gitignore  README.md  pyproject.toml
agent/: config.py  graph.py  helper.py  mcp_tools.py  prompts.py  state.py
agent/nodes/: classify.py  extract.py  normalize.py  retrieve.py  review.py
data/articles/: metadata.json
indexer/: artifacts.py  chunking.py  cleaning.py  embeddings.py  pipeline.py  types.py
indexer/sources/: pdf.py  text.py  url.py
indexer/store/: chroma_store.py
inputs/: build_index_input.txt
mcp_server/: server.py  storage.py  tools.py
scripts/: build_index.py  call_mcp.py  env.sh  run_agent.py
